[package]
name = "kmc"
version = "0.1.0"
edition = "2024"

[dependencies]
needletail = "0.6"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "2.0"
nthash = "0.5"
core_affinity = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
